--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ A short description of Tom Nook, <blockquote style=color:#003399>"A kind raccoon
 Tom Nook is a brown racoon dog with a sharp snout with hooded eyelids and purple pupils. Throughout the different games, he is seen in a variety of different outfits. While he does have various styles, he does appear in signature outfits throughout the series:
 <h2 style="font-weight:700; font-size:1rem">2001 to 2008:</h2>
 <center>
-<img src="https://static.wikia.nocookie.net/animalcrossing/images/7/72/Tom_Nook.png/revision/latest?cb=20101105231130"alt="Tom Nook in blue apron" width=120px height=200px><br></center>
+<img src="https://i.pinimg.com/originals/22/4a/fa/224afa6166014731f96c7d451fdb540c.png"alt="Tom Nook in blue apron" width=120px height=200px><br></center>
 <figcaption class="caption">Tom Nook's outfit in the games <i>Animal Forest</i> (2001), <i>Animal Crossing</i> (2001), <i>Animal Crossing: Wild World</i> (2005), and <i>Animal Crossing: City Folk</i> (2008). He is seen wearing a blue apron with the Animal Crossing leaf logo graphic. In <i>Animal Forest</i>, it is the kanji 店 (ten), meaning "shop". The blue apron is inferred to be for modesty, referencing the legends of tanuki.</figcaption><br>
 <br>
 <h2 style="font-weight:700; font-size:1rem">2008 to 2017:</h2>
@@ -98,7 +98,7 @@ Tom Nook is a brown racoon dog with a sharp snout with hooded eyelids and purple
 <figcaption class="caption">Tom Nook's outfit in the games <i>Animal Crossing: New Leaf</i> (2012), <i>Animal Crossing: Happy Home Designer</i> (2015), <i>Animal Crossing: Amiibo Party</i> (2015), and <i>Animal Crossing: Pocket Camp</i> (2017). He is seen in a white button up shirt, a red necktie, layered underneath a green argayle print sweater vest and grey trousers.</figcaption>
 <br>
 <h2 style="font-weight:700; font-size:1rem">2020 to Present</h2><br>
-<center><img src="https://static.wikia.nocookie.net/forsmash-community/images/7/72/Tom_Nook.png/revision/latest?cb=20191222013743"alt="Tom Nook in vacation clothing" width=120px height=205px></center><br>
+<center><img src="https://www.nintendo.com.au/modules/prodcatalogue/templates/custom/animal_crossing_new_horizons/img/nswitch_animalcrossingnewhorizons_overview_gataway_char_nook.png"alt="Tom Nook in vacation clothing" width=120px height=205px></center><br>
 <figcaption class="caption">Tom Nook's outfit in the most recent game release, <i>Animal Crossing: New Horizons</i> (2020). He is seen in a white short sleeved button up top with a teal leaf pattern and khakis.</figcaption>
 <br>
 From <i>Animal Forest through City Folk</i>, as the town's shop owner, he will wear different uniforms for each upgrade of his store.
